--- a/ps051/amajorScale.html
+++ b/ps051/amajorScale.html
@@ -3,77 +3,34 @@
 <head>
  <title>21M.051 Multitest Worksheet</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script src='http://code.jquery.com/jquery-latest.js'></script>
- <!-- midi.js package -->
- <script src="/m21j/ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="/m21j/ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src='http://www.vexflow.com/support/vexflow-min.js'></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="/m21j/music21j.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="/m21j/music21theory.js" type="text/javascript"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
 </head>
 <body>
 <script type="text/javascript">
+require(['m21theory'], function() {
+    m21theory.random.generatorType = 'fixed';
+    m21theory.random.seed = 1000;
 
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "/m21j/ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-			startTime = new Date().getTime();
-		}
-	});
-	M21Theory.randomGeneratorType = 'fixed';
-	M21Theory.randomSeed = 1000;
-
-	var msct = new M21Theory.ScaleEarTest();
-	msct.assignmentId = 'scaleEar_PracticeTest';
-	msct.totalQs = 14;
-	msct.maxMistakes = 3;
-	msct.allowEarlySubmit = true;
-	msct.studentFeedback = true;
-	msct.minSharps = 3;
-	msct.maxSharps = 3;
-	msct.tempo = 30;
-	
-	var testBank = new M21Theory.TestBank();
-	testBank.profEmail = "cuthbert+hello";
-	testBank.title = "Nothing but A Major";
-	testBank.instructions = "The following are questions that will be on the unit test.";
-	
-	testBank.append(msct);
-	testBank.render();
-};
+    var msct = m21theory.tests.get('scaleEar');
+    msct.assignmentId = 'scaleEar_PracticeTest';
+    msct.totalQs = 14;
+    msct.maxMistakes = 3;
+    msct.allowEarlySubmit = true;
+    msct.studentFeedback = true;
+    msct.minSharps = 3;
+    msct.maxSharps = 3;
+    msct.tempo = 30;
+    
+    var testBank = new m21theory.bank.TestBank();
+    testBank.profEmail = "cuthbert+hello";
+    testBank.title = "Nothing but A Major";
+    testBank.instructions = "The following are questions that will be on the unit test.";
+    
+    testBank.append(msct);
+    testBank.render();    
+});
 </script>
 <div class="related">
 	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Intervals</a></li></ul>
