--- a/ps051/ps08.html
+++ b/ps051/ps08.html
@@ -3,68 +3,21 @@
 <head>
  <title>21M.051 Multitest Worksheet</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <!-- midi.js package -->
- <script src="/m21j/ext/midijs/js/MIDI/AudioDetect.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/LoadPlugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Plugin.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/MIDI/Player.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.XMLHttp.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/js/Window/DOMLoader.script.js" type="text/javascript"></script>
- <!-- extras -->
- <script src="/m21j/ext/midijs/inc/Base64.js" type="text/javascript"></script>
- <script src="/m21j/ext/midijs/inc/base64binary.js" type="text/javascript"></script>
- <!-- vexflow -->
- <script src='http://code.jquery.com/jquery-latest.js'></script>
- <script src='http://www.vexflow.com/support/vexflow-min.js'></script>
-
- <!-- jQuery UI for drag and drop... -->
- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js" type="text/javascript" ></script>
-
- <!-- music21j -->
- <script src="/m21j/music21jExp.js" type="text/javascript"></script>
- 
- <!-- music21theory -->
- <script src="/m21j/music21theoryExp.js" type="text/javascript"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
-
-<style>
-.lightInput { border: 1px gray dotted;
-			  background-color: #ffffcc;
-			   }
-.unanswered { background-color: #ffffbb; 
-			  opacity: .7;
-}
-.correct    { background-color: #bbffbb; }
-.incorrect  { background-color: #ffbbbb; }
-
-</style>
-
+ <script data-main="../src/m21theory" src="../ext/require/require.js"></script>
+  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
 <body>
 <script type="text/javascript">
-
-window.onload = function () {
-	MIDI.loadPlugin({
-		soundfontUrl: "/m21j/ext/midijs/soundfont/",
-		instrument: "acoustic_grand_piano",
-		callback: function() {
-			M21Theory.playMotto();
-			startTime = new Date().getTime();
-		}
-	});
-	// M21Theory.randomGeneratorType = 'fixed';
-	// M21Theory.randomSeed = 1000;
-
-	var noteIdentify = new M21Theory.NoteIdentificationTest();
-	noteIdentify.allowEarlySubmit = true;
+require(['m21theory'], function () { 
+	var noteIdentify = m21theory.tests.get('noteIdentification');
 	
-	var msct = new M21Theory.ScaleEarTest();
+	var msct = m21theory.tests.get('scaleEar');
 	msct.totalQs = 14;
 	msct.maxMistakes = 3;
 	msct.allowEarlySubmit = true;
 	
-	var it1 = new M21Theory.IntervalTest();
+	var it1 = m21theory.tests.get('interval');
 
 	it1.totalQs = 16;
 	it1.minInterval = -3;
@@ -73,16 +26,16 @@ window.onload = function () {
 	it1.assignmentId = 'multipartIntervals1';
 	it1.allowEarlySubmit = true;
 
-	var ks1 = new M21Theory.KeySignatureTest();
+	var ks1 = m21theory.tests.get('keySignature');
 	ks1.allowEarlySubmit = true;
 
-	var cc = new M21Theory.ChordCreationTest();
+	var cc = m21theory.tests.get('chordCreation');
 	cc.allowEarlySubmit = true;
 	cc.modeChoices = ['major'];
 	cc.chordChoicesMode = {'major': ['I','IV','V']};
 	cc.chordChoices = ['Tonic','Subdominant','Dominant'];
 	
-	var testBank = new M21Theory.TestBank();
+	var testBank = new m21theory.bank.TestBank();
 	testBank.testId = "ps08";
 	testBank.title = "Problem Set 8: Preparation for Unit test";
 	testBank.instructions = "The following are questions that will be on the unit test.";
@@ -93,10 +46,10 @@ window.onload = function () {
 	testBank.append(ks1);
 	testBank.append(cc);
 	testBank.render();
-};
+});
 </script>
 <div class="related">
-	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Intervals</a></li></ul>
+	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Multipart prep.</a></li></ul>
 </div>
 <div class="document">
   <div class="documentwrapper">
