--- a/testHTML/roundCanon.html
+++ b/testHTML/roundCanon.html
@@ -3,7 +3,7 @@
 <head>
  <title>21M.051: Make me a Canon!</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <script data-main="../src/m21theory.js" src="../ext/require/require.js"></script>
+ <script data-main="../src/music21" src="../ext/require/require.js"></script>
  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 
 </head>
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 var m2;
 
-require(['m21theory'], function() { 
+require(['music21'], function() { 
     makeRound();    
 });
 
@@ -134,9 +134,6 @@ makeRound = function () {
 }
 
 </script>
-<div class="related">
-	<ul><li><a href="#">21m.051 Cuthbert</a> &raquo; <a href="#">Round Canon</a></li></ul>
-</div>
 <div class="document">
   <div class="documentwrapper">
 	<div class="bodywrapper">
