--- a/testHTML/crossSiteTest.html
+++ b/testHTML/crossSiteTest.html
@@ -1,5 +1,5 @@
 <html><head>
-   <script data-main="//localhost:8000/src/music21" src="//localhost:8000/ext/require/require.js"></script>
+   <script data-main="http://localhost:8000/src/music21" src="http://localhost:8000/ext/require/require.js"></script>
    <script>
    require(['music21'], function () {
        var n = new music21.note.Note("F#");
