--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -2,7 +2,7 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <script data-main="../music21" src="../ext/require/require.js"></script>
+  <script data-main="../src/music21" src="../ext/require/require.js"></script>
 
 </head>
 <body>
@@ -21,13 +21,25 @@
       t.subThing = st;
       t.subThing2 = st;
       m21Note = new music21.note.Note('C#5')
+      m21Note[tags.PY_CLASS] = 'music21.note.Note';
+      d = m21Note.duration;
+      d[tags.PY_CLASS] = 'music21.duration.Duration';
+      b = m21Note.beams;
+      b[tags.PY_CLASS] = 'music21.beam.Beams';
       p = m21Note.pitch;
       p.accidental[tags.PY_CLASS] = 'music21.pitch.Accidental';
       p[tags.PY_CLASS] = 'music21.pitch.Pitch';
-      o = jsonpickle.encode(p);
+      o = jsonpickle.encode(m21Note);
       console.log(o);
+      console.log('-------');
+      nOut = jsonpickle.decode(o);
+      console.log(nOut);
+      s = new music21.stream.Stream();
+      s.append(nOut)
+      s.appendNewCanvas();
   });
 </script>
+<h1>A test of pickling and unpickling with jsonpickleJS</h1>
 </body>
 </html> 
 
