--- a/testHTML/audioSearchGame.html
+++ b/testHTML/audioSearchGame.html
@@ -1,5 +1,5 @@
 <html><head>
-<title>HTML5 Pitch Detector</title>
+<title>Match pitches</title>
    <script data-main="../src/music21" src="../ext/require/require.js"></script>
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
@@ -171,8 +171,8 @@
 </head>
 <body style='text-align: left;'>
 <div style='padding-left: 20px; background-color: white'>
-<h1>HTML5/Music21 Audiosearch Game</h1>
-<h2>Works on Chrome and Firefox (recent) only.</h2>
+<h1>Match pitches</h1>
+<h2>Needs Chrome, Firefox, or MS Edge.</h2>
 <button id='startListening'>Start Listening</button>
 <button id='stopListening'>Stop Listening</button>
 <button id='bassClef'>Bass</button>
